--- a/eShop.BackendApi/eShop.BackendApi.csproj
+++ b/eShop.BackendApi/eShop.BackendApi.csproj
@@ -5,10 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\eShop.Application\eShop.Application.csproj" />
     <ProjectReference Include="..\eShop.Data\eShop.Data.csproj" />
     <ProjectReference Include="..\eShop.Utilities\eShop.Utilities.csproj" />
     <ProjectReference Include="..\eShop.ViewModel\eShop.ViewModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\user-content\" />
   </ItemGroup>
 
 </Project>
