--- a/eShop.BackendApi/appsettings.json
+++ b/eShop.BackendApi/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Tokens": {
+    "Key": "019102000QUOCHIEP",
+    "Issuer": "https://webapi.quochiep.com.vn"
+  }
 }
