--- a/eShop.ViewModel/eShop.ViewModels.csproj
+++ b/eShop.ViewModel/eShop.ViewModels.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.3" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.13" />
   </ItemGroup>
 
