Paging and message and search

--- a/eShop.AdminApp/Properties/launchSettings.json
+++ b/eShop.AdminApp/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:62241",
-      "sslPort": 44393
+      "applicationUrl": "http://localhost:56532/",
+      "sslPort": 44339
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "eShop.AdminApp": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5002"
     }
   }
 }
