Role user and  language for index Modify service Admin

--- a/eShop.AdminApp/eShop.AdminApp.csproj
+++ b/eShop.AdminApp/eShop.AdminApp.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\eShop.Utilities\eShop.Utilities.csproj" />
     <ProjectReference Include="..\eShop.ViewModel\eShop.ViewModels.csproj" />
   </ItemGroup>
 
