--- a/eShop.AdminApp/appsettings.json
+++ b/eShop.AdminApp/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "DefaultLanguageId": "vi-VN",
   "Tokens": {
     "Key": "019102000QUOCHIEP",
     "Issuer": "https://webapi.quochiep.com.vn"
