--- a/eShop.WebApp/Properties/launchSettings.json
+++ b/eShop.WebApp/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50806",
+      "applicationUrl": "http://localhost:50804",
       "sslPort": 44376
     }
   },
@@ -18,10 +18,10 @@
     "eShop.WebApp": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5003"
     }
   }
 }
