--- a/eShop.WebApp/eShop.WebApp.csproj
+++ b/eShop.WebApp/eShop.WebApp.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="LazZiya.TagHelpers" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\eShop.ApiIntegration\eShop.ApiIntegration.csproj" />
+  </ItemGroup>
+
 </Project>
