--- a/eShop.WebApp/eShop.WebApp.csproj
+++ b/eShop.WebApp/eShop.WebApp.csproj
@@ -7,11 +7,13 @@
   <ItemGroup>
     <PackageReference Include="LazZiya.ExpressLocalization" Version="4.0.4" />
     <PackageReference Include="LazZiya.TagHelpers" Version="5.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Logging" Version="6.9.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.9.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.9.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\eShop.ApiIntegration\eShop.ApiIntegration.csproj" />
   </ItemGroup>
-
 </Project>
