--- a/eShop.Data/eShop.Data.csproj
+++ b/eShop.Data/eShop.Data.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\eShop.Utilities\eShop.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
