--- a/eShop.ViewModel/eShop.ViewModels.csproj
+++ b/eShop.ViewModel/eShop.ViewModels.csproj
@@ -9,11 +9,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.3" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.13" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\eShop.Data\eShop.Data.csproj" />
     <ProjectReference Include="..\eShop.Utilities\eShop.Utilities.csproj" />
   </ItemGroup>
 
