--- a/eShop.Application/eShop.Application.csproj
+++ b/eShop.Application/eShop.Application.csproj
@@ -13,4 +13,8 @@
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="SendGrid" Version="9.26.0" />
+	</ItemGroup>
 </Project>
