--- a/eShop.BackendApi/appsettings.Development.json
+++ b/eShop.BackendApi/appsettings.Development.json
@@ -8,5 +8,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "EmailSenderSettings": {
+    "SendGridKey": "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",
+    "EmailFrom": "hiepgakute1111@gmail.com"
   }
 }
