--- a/eShop.BackendApi/appsettings.Development.json
+++ b/eShop.BackendApi/appsettings.Development.json
@@ -10,7 +10,7 @@
     }
   },
   "EmailSenderSettings": {
-    "SendGridKey": "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",
-    "EmailFrom": "hiepgakute1111@gmail.com"
+    "SendGridKey": "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",
+    "EmailFrom": "hiepgakute1019@gmail.com"
   }
 }
