--- a/eShop.BackendApi/appsettings.Development.json
+++ b/eShop.BackendApi/appsettings.Development.json
@@ -10,7 +10,7 @@
     }
   },
   "EmailSenderSettings": {
-    "SendGridKey": "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",
+    "SendGridKey": "@@@@@@",
     "EmailFrom": "hiepgakute1019@gmail.com"
   }
 }
