HanTN18 update connectstring in appsetting

--- a/eShop.Data/appsettings.json
+++ b/eShop.Data/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "eShopDb": "Server=DESKTOP-64HO20T\\SQLEXPRESS;Database=eShop;Trusted_Connection=True;"
+    "eShopDb": "Server=NGUYENHAN\\SQLEXPRESS;Database=eShop;Trusted_Connection=True;"
   }
 }
