Update-Code-Backend-FrontEnd

--- a/eShop.AdminApp/eShop.AdminApp.csproj
+++ b/eShop.AdminApp/eShop.AdminApp.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\eShop.ViewModel\eShop.ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\js\paging\" />
+  </ItemGroup>
+
 </Project>
