--- a/eShop.BackendApi/appsettings.Development.json
+++ b/eShop.BackendApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "eShopDb": "Server=NGUYENHAN\\SQLEXPRESS;Database=eShop;Trusted_Connection=True;"
+    "eShopDb": "Server=DESKTOP-64HO20T\\SQLEXPRESS;Database=eShop;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +9,4 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
-  
 }
