--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /eShop.BackendApi/wwwroot/user-content
+eShop.BackendApi/appsettings.Development.json
