--- a/eShop.ViewModel/eShop.ViewModels.csproj
+++ b/eShop.ViewModel/eShop.ViewModels.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\eShop.Data\eShop.Data.csproj" />
     <ProjectReference Include="..\eShop.Utilities\eShop.Utilities.csproj" />
   </ItemGroup>
 
