--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,4 @@ MigrationBackup/
 .ionide/
 /eShop.BackendApi/wwwroot/user-content
 eShop.BackendApi/appsettings.Development.json
+eShop.BackendApi/wwwroot/FilesSendMail/hinh-nen-laptop-full-hd-anh-nang-chieu-tren-con-duong-nui-de_xcvft_034800289.jpeg
